Fix: Video Cutoff

--- a/src/pages/project/project.less
+++ b/src/pages/project/project.less
@@ -113,7 +113,7 @@
         inset: 0;
         width: 100%;
         height: 100%;
-        object-fit: cover;
+        object-fit: contain;
         border-radius: 1px;
         opacity: 0;
         transition: opacity 0.2s ease;
